--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,8 @@ target_link_libraries(SDL_gpu_examples
     SDL3::SDL3
 )
 
+target_link_libraries(SDL_gpu_examples openxr_loader)
+
 add_custom_command(TARGET SDL_gpu_examples POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/Content $<TARGET_FILE_DIR:SDL_gpu_examples>/Content
 )
